# LabelMate

./: .env  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
utils/: charts.py  text_helper.py
