[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "labelmate"
version = "1.0.0"
description = "AI-Powered Data Labeling Assistant"
authors = [{name = "Swamy", email = "your-email@domain.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.1.4",
    "pillow>=10.3.0",
    "requests>=2.31.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.2",
    "openai>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/swamy18/labelmate"
Repository = "https://github.com/swamy18/labelmate"
Documentation = "https://github.com/swamy18/labelmate/wiki"
"Bug Tracker" = "https://github.com/swamy18/labelmate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.1",
    "pre-commit>=3.3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=utils --cov-report=html --cov-report=term-missing"
